test: fix failing tests
Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>